web ui form outgoing

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -126,7 +126,7 @@
                                 <div class="card-body text-dark">
                                     <div class="row mb-1">
                                         <div class="col-xl-12 text-left">
-                                            <button type="button" class="btn btn-primary btn" id="present-car" data-mode="" data-edit="" data-form="transceiver"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Предъявить вагон</button>
+                                            <button type="button" class="btn btn-primary btn" id="present_car" data-mode="edit" data-edit="" data-form="transceiver"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Предъявить вагон</button>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -205,12 +205,12 @@
                                                             </div>
                                                         </div>*@
                                                     <div class="col-xl-3 mb-1 text-left">
-                                                        <label for="gruzp_arrival" class="mb-1">@IDSRWTResource.title_gruzp_uz:</label>
-                                                        <input type="text" class="form-control inp-auto" id="gruzp_arrival" name="gruzp_arrival" title="" data-mode="" data-edit="" data-form="transceiver">
+                                                        <label for="gruzp_uz" class="mb-1">@IDSRWTResource.title_gruzp_uz:</label>
+                                                        <input type="text" class="form-control inp-auto" id="gruzp_uz" name="gruzp_uz" title="" data-mode="" data-edit="" data-form="transceiver">
                                                     </div>
                                                     <div class="col-xl-3 mb-1 text-left">
-                                                        <label for="tara_arrival" class="mb-1">@IDSRWTResource.title_tara_uz:</label>
-                                                        <input type="text" class="form-control inp-auto" id="tara_arrival" name="tara_arrival" title="" data-mode="" data-edit="" data-form="transceiver">
+                                                        <label for="tara_uz" class="mb-1">@IDSRWTResource.title_tara_uz:</label>
+                                                        <input type="text" class="form-control inp-auto" id="tara_uz" name="tara_uz" title="" data-mode="" data-edit="" data-form="transceiver">
                                                     </div>
                                                 </div>
                                                 <div class="form-row">
