--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -113,7 +113,11 @@
                                     Отправленные вагоны
                                 </div>
                                 <div class="card-body">
-                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem;"></table>
+                                    <div class="row">
+                                        <div class="col-xl-12">
+                                            <table class="display compact cell-border row-border hover" id="table-outgoing-cars" style="width:100%; font-size:0.8rem;"></table>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card-footer text-muted">
 
