deverlop view car of present&return

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -130,7 +130,8 @@
                                 <div class="card-body text-dark">
                                     <div class="row mb-1">
                                         <div class="col-xl-12 text-left">
-                                            <button type="button" class="btn btn-primary btn" id="present_car" data-mode="edit" data-edit="" data-form="transceiver"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Предъявить вагон</button>
+                                            <button type="button" class="btn btn-primary btn" id="present_car" data-mode="" data-edit="" data-form=""><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Предъявить вагон</button>
+                                            <button type="button" class="btn btn-danger btn float-right" id="return_car" data-mode="" data-edit="" data-form="">Вернуть вагон <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
                                         </div>
                                     </div>
                                     <div class="row">
