deverlop form out sostav

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -544,88 +544,160 @@
 </div>
 
 <div id="outgoing-sostav" title="" style="display:none">
-    <div class="alert" id="arrival-sostav-alert"></div>
-    <form id="form-arrival-sostav">
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_num_sheet" class="col-sm-5 col-form-label">@IDSRWTResource.title_num_sheet:</label>
-            <div class="col-sm-7">
-                <input type="number" class="form-control" id="arrival_sostav_num_sheet" name="arrival_sostav_num_sheet" required="required" disabled="disabled">
-                <div class="invalid-feedback">
+    <div class="alert" id="outgoing-sostav-alert"></div>
 
+    <form id="form-outgoing-sostav">
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_num_sheet" class="col-xl-7 col-form-label">@IDSRWTResource.title_num_sheet:</label>
+            <div class="col-xl-5">
+                <input type="number" class="form-control" id="sostav_num_sheet" name="sostav_num_sheet" disabled>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_end_inspection_acceptance_delivery" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_end_inspection_acceptance_delivery:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_end_inspection_acceptance_delivery" name="sostav_date_end_inspection_acceptance_delivery">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_end_inspection_loader" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_end_inspection_loader:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_end_inspection_loader" name="sostav_date_end_inspection_loader">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_end_inspection_vagonnik" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_end_inspection_vagonnik:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_end_inspection_vagonnik" name="sostav_date_end_inspection_vagonnik">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_readiness_uz" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_readiness_uz:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_readiness_uz" name="sostav_date_readiness_uz">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_outgoing" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_outgoing:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_outgoing" name="sostav_date_outgoing">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_outgoing_act" class="col-xl-7 col-form-label">@IDSRWTResource.title_date_outgoing_act:</label>
+            <div class="col-xl-5">
+                <input type="datetime" class="form-control" id="sostav_date_outgoing_act" name="sostav_date_outgoing_act">
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="sostav_date_outgoing_act" class="col-xl-7 col-form-label">@IDSRWTResource.title_outgoing_station_on:</label>
+            <div class="col-xl-5">
+                <select class="form-control" id="sostav_station_on" name="sostav_station_on" required="required"></select>
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-xl-7">@IDSRWTResource.title_outgoing_sign:</div>
+            <div class="col-xl-5">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="sostav_outgoing_route_sign" name="sostav_outgoing_route_sign">
+                    <label class="form-check-label" for="sostav_outgoing_route_sign">@IDSRWTResource.title_outgoing_route</label>
                 </div>
             </div>
         </div>
         <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_date_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_arrival:</label>
-            <div class="col-sm-7">
-                <input type="datetime" class="form-control" id="arrival_sostav_date_arrival" name="arrival_sostav_date_arrival" required="required">
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_date_adoption" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_adoption:</label>
-            <div class="col-sm-7">
-                <input type="datetime" class="form-control" id="arrival_sostav_date_adoption" name="arrival_sostav_date_adoption" required="required">
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_date_adoption_act" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_adoption_act:</label>
-            <div class="col-sm-7">
-                <input type="datetime" class="form-control" id="arrival_sostav_date_adoption_act" name="arrival_sostav_date_adoption_act">
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_station_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_station_on:</label>
-            <div class="col-sm-7">
-                <select class="form-control" id="arrival_sostav_station_on" name="arrival_sostav_station_on" required="required"></select>
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_way_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_way_on:</label>
-            <div class="col-sm-7">
-                <select class="form-control" id="arrival_sostav_way_on" name="arrival_sostav_way_on" required="required"></select>
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_count_car" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_count_car:</label>
-            <div class="col-sm-7">
-                <input type="number" class="form-control" id="arrival_count_car" name="arrival_count_car" disabled="disabled">
-                <div class="invalid-feedback">
-
-                </div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="arrival_sostav_way_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_numeration:</label>
-            <div class="col-sm-7" id="arrival_sostav_numeration">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="arrival_sostav_head" value="option1">
-                    <label class="form-check-label" for="arrival_sostav_head">Голова</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="arrival_sostav_tail" value="option2">
-                    <label class="form-check-label" for="arrival_sostav_tail">Хвост</label>
-                </div>
-            </div>
-            <div class="invalid-feedback" style="margin-left:260px">
-
+            <label for="sostav_composition_index" class="col-xl-7 col-form-label">@IDSRWTResource.title_composition_index:</label>
+            <div class="col-xl-5">
+                <input type="text" class="form-control" id="sostav_composition_index" name="sostav_composition_index">
+                <div class="invalid-feedback"></div>
             </div>
         </div>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
+
+
+
+
+    @*<form id="form-arrival-sostav">
+
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_date_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_arrival:</label>
+                <div class="col-sm-7">
+                    <input type="datetime" class="form-control" id="arrival_sostav_date_arrival" name="arrival_sostav_date_arrival" required="required">
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_date_adoption" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_adoption:</label>
+                <div class="col-sm-7">
+                    <input type="datetime" class="form-control" id="arrival_sostav_date_adoption" name="arrival_sostav_date_adoption" required="required">
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_date_adoption_act" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_adoption_act:</label>
+                <div class="col-sm-7">
+                    <input type="datetime" class="form-control" id="arrival_sostav_date_adoption_act" name="arrival_sostav_date_adoption_act">
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_station_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_station_on:</label>
+                <div class="col-sm-7">
+                    <select class="form-control" id="arrival_sostav_station_on" name="arrival_sostav_station_on" required="required"></select>
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_way_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_way_on:</label>
+                <div class="col-sm-7">
+                    <select class="form-control" id="arrival_sostav_way_on" name="arrival_sostav_way_on" required="required"></select>
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_count_car" class="col-sm-5 col-form-label">@IDSRWTResource.title_arrival_count_car:</label>
+                <div class="col-sm-7">
+                    <input type="number" class="form-control" id="arrival_count_car" name="arrival_count_car" disabled="disabled">
+                    <div class="invalid-feedback">
+
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom:0.5rem">
+                <label for="arrival_sostav_way_on" class="col-sm-5 col-form-label">@IDSRWTResource.title_numeration:</label>
+                <div class="col-sm-7" id="arrival_sostav_numeration">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="arrival_sostav_head" value="option1">
+                        <label class="form-check-label" for="arrival_sostav_head">Голова</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="arrival_sostav_tail" value="option2">
+                        <label class="form-check-label" for="arrival_sostav_tail">Хвост</label>
+                    </div>
+                </div>
+                <div class="invalid-feedback" style="margin-left:260px">
+
+                </div>
+            </div>
+             Allow form submission with keyboard without duplicating the dialog button
+            <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+        </form>*@
 </div>
