--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -96,6 +96,7 @@
                                             <button type="button" class="btn btn-outline-secondary" title="">Погр.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Весы.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Предоставить состав для сдачи на дорогу" id="provide">Пред.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав на станцию УЗ" id="sending_uz">Отпр УЗ.</button>
                                         </div>
                                         <div class="btn-group mr-2" role="group" aria-label="Second group">
                                             <button type="button" class="btn btn-outline-secondary" title="">Авто</button>
@@ -454,10 +455,10 @@
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
                                                             @*<div class="col-xl-6 mb-1 text-left">
-                                                                    <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
-                                                                    <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
-                                                                    <div class="invalid-feedback"></div>
-                                                                </div>*@
+                                                            <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
+                                                            <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
+                                                            <div class="invalid-feedback"></div>
+                                                        </div>*@
                                                         </div>
                                                     </fieldset>
                                                 </div>
@@ -743,6 +744,94 @@
                                                             </div>
                                                         </div>
                                                     </fieldset>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row operation-sending-uz">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div class="card border-secondary mb-1">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-xl-12 text-center">
+                                    <div class="container-fluid">
+                                        ОПЕРАЦИЯ "ОТПРАВЛЕНИЯ СОСТАВА НА СТАНЦИЮ УЗ"
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body text-dark pl-3 pr-3">
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-primary">
+                                        <div class="card-header text-left">ПРЕДЪЯВИТЬ СОСТАВ</div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-xl-3">
+                                                    <fieldset class="border-primary">
+                                                        <div class="form-row text-center ">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <button class="btn btn-primary" id="operation_sending_uz_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
+                                                            </div>
+
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_station_from" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_uz_station_from:</label>
+                                                                <select class="form-control" id="operation_detali_sending_uz_station_from" name="operation_detali_sending_uz_station_from"></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_way_from" class="col-form-label">@IDSRWTResource.title_operation_detali_sending_uz_way_from:</label>
+                                                                <select class="form-control" id="operation_detali_sending_uz_way_from" name="operation_detali_sending_uz_way_from" disabled></select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left" style="font-size:0.7rem">
+                                                                <table id="operation_detali_sending_uz_sostav_out" class="compact table table-striped table-hover" style="width:100%;"></table>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_lead_time" class="col-form-label">@IDSRWTResource.title_operation_detali_lead_time</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_uz_lead_time" name="operation_detali_sending_uz_lead_time" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                                <div class="col-xl-9">
+                                                    <fieldset class="border-primary">
+                                                        <legend class="text-primary">Информация по составу</legend>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-info">
+                                        <div class="card-header text-left">ВАГОНЫ ОТПРАВЛЯЕМЫЕ В СОСТАВЕ</div>
+                                        <div class="card-body">
+                                            <div class="card border-primary mb-1" style="width:100%">
+                                                <div class="card-header">Вагоны на пути</div>
+                                                <div class="card-body text-primary">
+                                                    <div class="row">
+                                                        <div class="col-xl-12 operator-detali-tables">
+                                                            <table id="wagons-provide-way-from" class="compact table table-striped table-hover" style="width:100%;"></table>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
