deverlop sending uz

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -796,7 +796,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
-                                                            <div class="col-xl-12 mb-1 text-left" style="font-size:0.7rem">
+                                                            <div class="col-xl-12 mb-1 text-left" style="font-size:0.8rem">
                                                                 <table id="operation_detali_sending_uz_sostav_out" class="compact table table-striped table-hover" style="width:100%;"></table>
                                                             </div>
                                                         </div>
@@ -811,27 +811,13 @@
                                                 </div>
                                                 <div class="col-xl-9">
                                                     <fieldset class="border-primary">
-                                                        <legend class="text-primary">Информация по составу</legend>
-                                                    </fieldset>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-1">
-                                <div class="col-xl-12">
-                                    <div class="card border-info">
-                                        <div class="card-header text-left">ВАГОНЫ ОТПРАВЛЯЕМЫЕ В СОСТАВЕ</div>
-                                        <div class="card-body">
-                                            <div class="card border-primary mb-1" style="width:100%">
-                                                <div class="card-header">Вагоны на пути</div>
-                                                <div class="card-body text-primary">
-                                                    <div class="row">
-                                                        <div class="col-xl-12 operator-detali-tables">
-                                                            <table id="wagons-provide-way-from" class="compact table table-striped table-hover" style="width:100%;"></table>
+                                                        <legend class="text-primary">ВАГОНЫ ОТПРАВЛЯЕМЫЕ В СОСТАВЕ</legend>
+                                                        <div class="row">
+                                                            <div class="col-xl-12 operator-detali-tables">
+                                                                <table id="wagons-sending_uz-way-from" class="compact table table-striped table-hover" style="width:100%;"></table>
+                                                            </div>
                                                         </div>
-                                                    </div>
+                                                    </fieldset>
                                                 </div>
                                             </div>
                                         </div>
