delete functional out kis deverlop form sending add function wir.sending

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -806,6 +806,21 @@
                                                                 <input type="datetime" class="form-control" id="operation_detali_sending_uz_lead_time" name="operation_detali_sending_uz_lead_time" />
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_composition_index" class="col-form-label">@IDSRWTResource.title_composition_index</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_uz_composition_index" name="operation_detali_sending_uz_composition_index" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_date_readiness_amkr" class="col-form-label">@IDSRWTResource.title_operation_detali_date_readiness_amk</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_uz_date_readiness_amkr" name="operation_detali_sending_uz_date_readiness_amkr" disabled />
+                                                            </div>
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_sending_uz_date_outgoing" class="col-form-label">@IDSRWTResource.title_operation_detali_date_outgoing</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_sending_uz_date_outgoing" name="operation_detali_sending_uz_date_outgoing" disabled />
+                                                            </div>
                                                         </div>
                                                     </fieldset>
                                                 </div>
