--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -160,9 +160,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-5" href="#">
-                            <h3>Service #5</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-4" href='@Url.Action("PresentWagonMarking", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.present_wagon_marking_title</h3>
+                            <p>@DirectoryResource.present_wagon_marking_description</p>
                         </a>
                     </li>
                     <li>
