--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -39,6 +39,7 @@
                                 </button>*@
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href=#>ВДС «ЖД АМКР»</a>
                                 <div class="dropdown-menu">
+                                    <a class="dropdown-item" href='@Url.Action("Index", "Home", new { area = "IDSRWT" })'>@WEB_UI.App_LocalResources.IDSRWTResource.home_vds_title</a>
                                     <a class="dropdown-item" href='@Url.Action("Arrival", "Home", new { area = "IDSRWT" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.arrival_title</a>
                                     <a class="dropdown-item" href='@Url.Action("Incoming", "Home", new { area = "IDSRWT" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.incoming_title</a>
                                     <a class="dropdown-item" href='@Url.Action("WSD", "Home", new { area = "IDSRWT" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.wsd_title</a>
@@ -55,6 +56,7 @@
                                     <a class="dropdown-item" href='@Url.Action("InstructionalLetters", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_letters</a>
                                     <a class="dropdown-item" href='@Url.Action("SearchWagon", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_searsh_wagon</a>
                                     <a class="dropdown-item" href='@Url.Action("WagonMarking", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_wagon_marking</a>
+                                    <a class="dropdown-item" href='@Url.Action("PresentWagonMarking", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_present_wagon_marking</a>
                                     <a class="dropdown-item" href='@Url.Action("ParkState", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_park_state</a>
                                     <a class="dropdown-item" href='@Url.Action("Cars", "Home", new { Area = "Directory" })' target="_blank">@WEB_UI.App_LocalResources.IDSRWTResource.title_link_wagon_dir</a>
                                 </div>
