--- a/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
@@ -45,8 +45,8 @@
                                     </span>
                                     <label class="col-form-label text-white mr-2" for="select_station">Станция прибытия: </label>
                                     <select type="text" id="select_station" name="select_station" class="form-control" style="font-size:1.5rem"></select>
-                                    <label class="col-form-label text-white mr-2" for="select_doc">Номер документа: </label>
-                                    <select type="text" id="select_doc" name="select_doc" class="form-control" style="font-size:1.5rem"></select>
+                                    @*<label class="col-form-label text-white mr-2" for="select_doc">Номер документа: </label>
+                                    <select type="text" id="select_doc" name="select_doc" class="form-control" style="font-size:1.5rem"></select>*@
                                 </form>
                             </div>
                         </div>
@@ -54,25 +54,39 @@
                 </div>
                 <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
                     <div class="card">
-                        <div class="card-header" id="sostav_info">
-
-                            @*<label id="sostav_info"></label>*@
-                        </div>
+                        <div class="card-header" id="sostav_info"></div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-xl-8" style="font-size:13px">
-                                    <table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>
-                                </div>
-                                <div class="col-xl-4" style="font-size:13px">
-                                    <form>
+                                <div class="col-xl-6">
+                                    <fieldset class="border-primary">
+                                        <legend class="text-primary">Предъявленные составы</legend>
                                         <div class="row">
-                                            <div class="col-xl-12">
-                                                <label for="edit_note_vagonnik" class="col-form-label">@DirectoryResource.title_edit_note_vagonnik:</label>
-                                                <textarea class="form-control" id="edit_note_vagonnik" name="edit_note_vagonnik" rows="10" style="font-size:13px"></textarea>
+                                            <div class="col-xl-12" style="font-size:1.2rem">
+                                                <table class="compact table table-striped table-hover" id="table-sostav" style="width:100%;"></table>
                                             </div>
                                         </div>
-                                    </form>
+                                    </fieldset>
                                 </div>
+                                <div class="col-xl-6">
+                                    <fieldset class="border-primary">
+                                        <legend class="text-primary">Вагоны в составе</legend>
+                                        <div class="row">
+                                            <div class="col-xl-12">
+                                                <table class="compact table table-striped table-hover" id="table-wagon" style="width:100%;"></table>
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                                @*<div class="col-xl-4" style="font-size:13px">
+                                        <form>
+                                            <div class="row">
+                                                <div class="col-xl-12">
+                                                    <label for="edit_note_vagonnik" class="col-form-label">@DirectoryResource.title_edit_note_vagonnik:</label>
+                                                    <textarea class="form-control" id="edit_note_vagonnik" name="edit_note_vagonnik" rows="10" style="font-size:13px"></textarea>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
